cleaning some warnings